# project_1

./: .gitignore  README.md  meson.build
adc/: meson.build
adc/at/: adc.cpp  adc_tb.cpp  meson.build
adc/lt/: adc.cpp  adc_tb.cpp  meson.build
adc/pv/: adc.cpp  adc_tb.cpp  meson.build
ble/pv/: ble.cpp  ble_tb.cpp  meson.build
cpu/: meson.build
cpu/pv/: control.cpp  instruction_register.cpp  meson.build  multiplex3.cpp  pipeline_reg.h  processor.cpp  processor_run.cpp  program_counter.cpp  stim.h  test_control.cpp  tests_ram.cpp  ula.h
cpu/pv/control/: stim.h
cpu/pv/decoder/: decoder.cpp  stim.h  test_decoder.cpp
cpu/pv/instruction_register/: instruction_register.cpp  stim.h  test_instruction_register.cpp
cpu/pv/multiplex2/: multiplex2.cpp  stim.h  test_multiplex2.cpp
cpu/pv/multiplex3/: multiplex3.cpp  stim.h  test_multiplex3.cpp
cpu/pv/pipeline_reg/: pipeline_reg.h  stim.h  test_pipeline_reg.cpp
cpu/pv/program_counter/: stim.h  test_program_counter.cpp
cpu/pv/ram/: ram.cpp  ram.h  stim.h  test_ram.cpp
cpu/pv/register_base/: register_base.h  stim.h  test_register_base.cpp
cpu/pv/ula/: stim.h  test_ula.cpp  ula.h
memory/: meson.build
memory/lt/: memory.cpp  memory_tb.cpp  meson.build
memory/pv/: memory.cpp  memory_tb.cpp  meson.build
memory_pv/: memory_tb.cpp
spi/: meson.build
spi/at/: meson.build  spi.cpp  spi_tb.cpp
spi/lt/: meson.build  spi.cpp  spi_tb.cpp
spi/pv/: meson.build  spi.cpp  spi_tb.cpp
uart/lt/: uart_tb.cpp
uart/pv/: meson.build  uart.cpp  uart_tb.cpp
